# MCSharp

./: .clang-format  .claudiaideconfig  .gitignore  .gitmodules  CMakeLists.txt  Datapack.cs  DatapackInfo.cs  FuncHolder.cs  Function.cs  FunctionInfo.cs  FunctionTag.cs  JsonText.cs  MCSharp.csproj  MCSharp.sln  README.md  SbValue.cs  StackManager.cs
Attribute/: ForbidAttribute.cs  FunctionTagAttribute.cs  InlineAttribute.cs  MCFunctionAttribute.cs  PenetrateAttribute.cs
Cmds/: Advancement.cs  Atrribute.cs  Attribute.cs  Ban.cs  Ban_ip.cs  Banlist.cs  BossBar.cs  Clear.cs  Clone.cs  Command.cs  Commands.cs  Comment.cs  Data.cs  Datapack.cs  Debug.cs  Defaultgamemode.cs  Deop.cs  Difficulty.cs  Effect.cs  Enchant.cs  Execute.cs  Experience.cs  Fill.cs  Fillbiome.cs  Forceload.cs  Function.cs  Gamemode.cs  Gamerule.cs  Give.cs  Help.cs  Item.cs  Jfr.cs  Kick.cs  Kill.cs  List.cs  Locate.cs  Loot.cs  Me.cs  Msg.cs  Op.cs  (+42 more)
Commands/: Commands.cs  Say.cs  Scoreboard.cs
Exception/: ArgumentNotMatchException.cs  AttributeConflictException.cs  BracketsNotMatchException.cs  ExecuteCommandListEndException.cs  FunctionNotRegistryException.cs  IllegalFormatException.cs  IllegalFunctionNameException.cs  IllegalUUIDException.cs  NBTException.cs  NoSuchDirectoryOrFunctionException.cs
Lib/: Double.cs
Properties/: AssemblyInfo.cs
Test/: Test.cs
Type/: BlockInfo.cs  Bossbar.cs  Color.cs  DataArg.cs  Entity.cs  ID.cs  IDataArg.cs  ItemStack.cs  JsonText.cs  MCInt.cs  MCType.cs  NBT.cs  NBTArray.cs  NBTBool.cs  NBTByte.cs  NBTByteArray.cs  NBTCompound.cs  NBTDouble.cs  NBTElement.cs  NBTFloat.cs  NBTInt.cs  NBTIntArray.cs  NBTList.cs  NBTLong.cs  NBTLongArray.cs  NBTPath.cs.dis  NBTShort.cs  NBTSingle.cs  NBTString.cs  NBTTag.cs  Pos.cs  Pos2D.cs  Rotation.cs  SbObject.cs  SbValue.cs  Selector.cs  SelectorBuilder.cs  Slot.cs  Storage.cs  UUID.cs  (+2 more)
Type/CommandArg/: BlockPredicate.cs  BlockState.cs  DataArg.cs  Difficulties.cs  FloatRange.cs  Gamemodes.cs  ID.cs  IntRange.cs  ItemPredicate.cs
Util/: Log.cs  Tools.cs  U.cs
include/mcsc/: datapack.h  version.h
include/mcsc/builtin/: errdump.h  proxybuilder.h
include/mcsc/command/: builderbase.h  cmdbase.h  proxybase.h  proxybuilder.h
include/mcsc/datapack/: itemtree.h  namespace.h  packformat.h  pathseq.h
src/: CMakeLists.txt  datapack.cpp
src/builtin/: errdump.cpp
src/datapack/: itemtree.cpp  pathseq.cpp
test/: CMakeLists.txt  DatapackBuilder_test.cpp  ItemTree_test.cpp  PathSeq_test.cpp  ProxyBuilder_test.cpp
